Feat: add PriceCalculatorService for vehicle price calculations and update QuotedService to utilize it Refactor: correct formatting in VehicleDTOToQuoted and update QuotedDTO to include finalPrice